new jira location

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
           <ul>
             <li><a href="https://github.com/senseidb/sensei" target="_new">Code</a></li>
 	        <li><a href="building.html">Building Sensei</a></li>
-            <li><a href="http://linkedin.jira.com/browse/SENSEI">Bugs</a></li>
+            <li><a href="https://senseidb.atlassian.net/browse/SENSEI">Bugs</a></li>
             <li><a href="contribute.html">Contribute</a></li>
           </ul>
 
